[workspace]
members = ["cult_staking"]
resolver = "2"

# Solana 2.3's cargo-build-sbf uses Rust 1.84, which doesn't support edition2024.
# Several deps (constant_time_eq 0.4.x, blake3 1.8.3) require it; use vendored older versions.
[patch.crates-io]
constant_time_eq = { path = "vendor/constant_time_eq" }
blake3 = { path = "vendor/blake3" }

[profile.release]
overflow-checks = true
