[package]
name = "cult_staking"
version = "0.1.0"
description = "CULT token staking program - stake CULT for voting power"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
# Acknowledge cfg names used by Anchor/solana_program macros (silences unexpected_cfgs warnings)
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
